@@ -366,7 +366,7 @@
 		  <property name="focus_on_click">True</property>
 		  <property name="active">False</property>
 		  <property name="inconsistent">False</property>
-		  <signal name="toggled" handler="toggle_playlist2" last_modification_time="Thu, 08 Jul 2004 14:53:56 GMT"/>
+		  <signal name="toggled" handler="toggle_playlist3" last_modification_time="Mon, 22 Nov 2004 06:57:20 GMT"/>
 		  <accelerator key="p" modifiers="0" signal="clicked"/>
 
 		  <child>
@@ -380,23 +380,6 @@
 		      <property name="ypad">0</property>
 		    </widget>
 		  </child>
-		</widget>
-		<packing>
-		  <property name="padding">0</property>
-		  <property name="expand">False</property>
-		  <property name="fill">False</property>
-		</packing>
-	      </child>
-
-	      <child>
-		<widget class="GtkButton" id="button41">
-		  <property name="visible">True</property>
-		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">pl3</property>
-		  <property name="use_underline">True</property>
-		  <property name="relief">GTK_RELIEF_NORMAL</property>
-		  <property name="focus_on_click">True</property>
-		  <signal name="clicked" handler="create_playlist3" last_modification_time="Fri, 22 Oct 2004 13:54:58 GMT"/>
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
